[package]
name = "grin_faucet"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = { version = "0.3", features = ["tls"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.22"  # For TLS support
rustls = "0.20"  # For the Rust TLS implementation
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }